--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 */node_modules
+*/__pycache__
 /.pnp
 .pnp.*
 .yarn/*
@@ -39,6 +40,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# server
-credentials.json
