--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "@supabase/auth-helpers-react": "^0.5.0"
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@types/react-datepicker": "^6.2.0",
+    "lucide-react": "^0.469.0",
+    "react-datepicker": "^7.5.0"
   }
 }
