--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lucide-react": "0.469.0",
+    "date-fns": "4.1.0"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "date-fns": "^4.1.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-datepicker": "^7.5.0",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
