--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/multimonth": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "date-fns": "^4.1.0",
     "next": "15.0.3",
