--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,17 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/google-calendar": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "date-fns": "^4.1.0",
-    "next": "15.0.3",
+    "next": "^15.3.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-datepicker": "^7.5.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "eslint": "^8",
