- Created new backend and frontend directories with essential files. - Added environment configuration files for production. - Included Docker Compose and license files. - Updated .gitignore to include environment files and exclude unnecessary files. - Removed package.json and package-lock.json from the frontend. - Added initial test files and documentation for API and deployment. - Introduced new components and context for authentication and event management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Environment files
+.env
+.env.local
+.env.*.local
 
-# dependencies
-*/node_modules
-__pycache__
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-*/.next
-/out/
-node_modules/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-.venv
-venv/
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# backend
-db_config.yml
-
-# vscode
-.vscode
+# Keep template files in git
+!.env.example
+!.env.template
