--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
