--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -54,7 +54,7 @@ server {
 
     # API proxy to backend
     location /api/ {
-        proxy_pass http://backend:5000;
+        proxy_pass http://backend:5050/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade \$http_upgrade;
         proxy_set_header Connection 'upgrade';
