--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - FLASK_HOST=0.0.0.0
       - FLASK_PORT=5050
       - RUNNING_IN_DOCKER=true
+      - PYTHONUNBUFFERED=1 # Forces Python to output logs immediately
     networks:
       - when-network
     healthcheck:
