feat: Implement AI-powered time proposal system with Gemini integration and comprehensive codebase improvements
This commit introduces a major new feature - AI-powered time proposals using Google Gemini - along with significant architectural improvements, enhanced documentation, and code quality refinements across the entire application.

## New Features

### AI Time Proposal System
- **Gemini AI Integration**: Integrated Google Gemini 2.5 Flash for intelligent meeting time suggestions
  - Smart analysis of participant availability, work hours, and preferences
  - Context-aware proposals considering event duration and participant count
  - Configurable number of suggestions (1-10) with quality scoring
- **Smart Caching**: Proposed times are cached in database to minimize API costs
  - Automatic invalidation when event details change (date range, participants, duration)
  - Background job regenerates stale proposals every 10 minutes
  - Force refresh option for coordinators
- **New Backend Components**:
  - `backend/app/services/time_proposal.py`: Core AI proposal generation logic
  - `backend/app/routes/time_proposal.py`: RESTful endpoints for proposals
  - `backend/app/models/proposed_time.py`: Pydantic model for proposed times
  - `backend/app/background_jobs/proposal_regeneration.py`: Scheduled background regeneration
- **New Frontend Components**:
  - `frontend/src/components/event/ProposedTimesModal.jsx`: Display AI suggestions
  - `frontend/src/components/event/FinalizeEventModal.jsx`: Event finalization UI
- **Database**: New `proposed_times` table with metadata tracking (migration 005)

### Frontend Architecture Improvements
- **Centralized API Service**: New `apiService.js` consolidates all API calls
  - Consistent error handling across the application
  - Automatic token management and request retries
  - Type-safe API method organization by domain (events, users, calendar, etc.)
- **Custom React Hook**: `useApiCall.js` for standardized async operations
  

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,4 +1,4 @@
-# Use Python 3.9 slim image for smaller size
+# Use Python 3.10 slim image for smaller size
 FROM python:3.10-slim
 
 # Set working directory
@@ -33,10 +33,9 @@ USER appuser
 # Expose port 5050
 EXPOSE 5050
 
-# Health check
+# Health check - Fixed port to 5050
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:5000/api/auth/debug/config', timeout=5)" || exit 1
+    CMD python -c "import requests; requests.get('http://localhost:5050/api/auth/debug/config', timeout=5)" || exit 1
 
 # Run the application with Gunicorn
 CMD ["gunicorn", "--bind", "0.0.0.0:5050", "--workers", "4", "--timeout", "120", "--access-logfile", "-", "--error-logfile", "-", "run:app"]
-
