--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,26 @@ GOOGLE_CLIENT_SECRET="your--google-client-secret"
 # OAuth Redirect URI
 # Must match what you configure in Google Cloud Console
 GOOGLE_REDIRECT_URI=http://localhost:5000/api/auth/google/callback
+
+# =============================================================================
+# GEMINI AI CONFIGURATION
+# =============================================================================
+
+# Gemini API credentials
+GEMINI_API_KEY=your_gemini_api_key
+GEMINI_MODEL=gemini-2.5-flash
+GEMINI_MAX_RETRIES=3
+
+# =============================================================================
+# TIME PROPOSAL BACKGROUND JOB CONFIGURATION
+# =============================================================================
+
+# Background job rate limiting (for Gemini API free tier)
+# Free tier limits: 5 RPM, 300k TPM, 20 RPD
+# Recommended settings for free tier:
+# - Max 4 events per run (leaves 1 request for manual refreshes)
+# - 15 second delay between calls (ensures < 5 RPM)
+# - Run job every 10 minutes
+PROPOSAL_REGEN_MAX_EVENTS_PER_RUN=4
+PROPOSAL_REGEN_DELAY_SECONDS=15
+PROPOSAL_REGEN_INTERVAL_MINUTES=10
