--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ google-auth==2.41.1
 google-auth-oauthlib==1.2.2
 google-auth-httplib2==0.2.0
 google-api-python-client==2.184.0
+google-generativeai==0.3.2
 pytest==8.0.2
 pytest-cov==4.1.0
 black==24.2.0
