--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,7 @@
 
 
 # Security hardening
-SESSION_COOKIE_SECURE=True
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001
-
-# Production logging
-LOG_LEVEL=WARNING
-LOG_FILE=/var/log/event-coordination/app.log
 
 # =============================================================================
 # FLASK CONFIGURATION
@@ -59,16 +54,12 @@ GEMINI_API_KEY=your_gemini_api_key
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_MAX_RETRIES=3
 
+
 # =============================================================================
-# TIME PROPOSAL BACKGROUND JOB CONFIGURATION
+# MICROSOFT CONFIGURATION
 # =============================================================================
 
-# Background job rate limiting (for Gemini API free tier)
-# Free tier limits: 5 RPM, 300k TPM, 20 RPD
-# Recommended settings for free tier:
-# - Max 4 events per run (leaves 1 request for manual refreshes)
-# - 15 second delay between calls (ensures < 5 RPM)
-# - Run job every 10 minutes
-PROPOSAL_REGEN_MAX_EVENTS_PER_RUN=4
-PROPOSAL_REGEN_DELAY_SECONDS=15
-PROPOSAL_REGEN_INTERVAL_MINUTES=10
+MICROSOFT_CLIENT_ID='your-microsoft-client-id'
+MICROSOFT_CLIENT_SECRET='your-microsoft-client-secret'
+MICROSOFT_TENANT_ID="common"
+MICROSOFT_REDIRECT_URI=http://localhost:5000/api/auth/microsoft/callback
